--- a/index.html
+++ b/index.html
@@ -2,116 +2,10 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <title>Courbe de Ritaline LP</title>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-    }
-    canvas {
-      width: 100% !important;
-      height: 100% !important;
-    }
-  </style>
+  <title>Test GitHub Pages</title>
 </head>
 <body>
-  <canvas id="ritalineChart"></canvas>
-
-  <script>
-    const canvas = document.getElementById('ritalineChart');
-    const ctx = canvas.getContext('2d');
-
-    let chart;
-
-    function concentrationRitalineLP(t, dose) {
-      const LI = dose * 0.5;
-      const LP = dose * 0.5;
-
-      const C_LI = LI * Math.exp(-1.2 * t);
-
-      const delay = 3;
-      const tLP = Math.max(t - delay, 0);
-      const C_LP = LP * (tLP / 2) * Math.exp(-0.3 * tLP);
-
-      return C_LI + C_LP;
-    }
-
-    function createChart(doses) {
-      const heures = [];
-      for (let h = 6; h <= 22; h += 0.25) {
-        heures.push(h.toFixed(2));
-      }
-
-      const concentrations = heures.map(h => {
-        const t = parseFloat(h);
-        let total = 0;
-        doses.forEach(({ heure, dose }) => {
-          const [hStr, mStr] = heure.split(":");
-          const heurePrise = parseInt(hStr) + parseInt(mStr) / 60;
-          const delta = t - heurePrise;
-          if (delta >= 0 && delta <= 12) {
-            total += concentrationRitalineLP(delta, parseFloat(dose));
-          }
-        });
-        return total.toFixed(2);
-      });
-
-      const labels = heures.map(h => {
-        const heure = Math.floor(h);
-        const minutes = Math.round((h - heure) * 60);
-        return `${heure}h${minutes.toString().padStart(2, '0')}`;
-      });
-
-      if (chart) chart.destroy();
-
-      chart = new Chart(ctx, {
-        type: 'line',
-        data: {
-          labels,
-          datasets: [{
-            label: 'Concentration de Ritaline (mg)',
-            data: concentrations,
-            borderColor: 'blue',
-            backgroundColor: 'transparent',
-            fill: false,
-            tension: 0.3,
-            pointRadius: 0
-          }]
-        },
-        options: {
-          responsive: true,
-          scales: {
-            y: {
-              beginAtZero: true,
-              title: {
-                display: true,
-                text: 'mg dans le corps'
-              }
-            },
-            x: {
-              title: {
-                display: true,
-                text: 'Heure'
-              },
-              ticks: {
-                maxRotation: 90,
-                minRotation: 60
-              }
-            }
-          }
-        }
-      });
-    }
-
-    window.addEventListener('message', (event) => {
-      try {
-        const data = JSON.parse(event.data);
-        createChart(data);
-      } catch (e) {
-        console.error("Erreur JSON :", e);
-      }
-    });
-  </script>
+  <h1>✅ Déploiement réussi !</h1>
+  <p>Si tu vois ce message, ton GitHub Pages fonctionne 🎉</p>
 </body>
 </html>
